--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
-  oauth1: ^0.9.0
+  oauth1: ^2.0.0
+  url_launcher: ^6.1.4
 
 dev_dependencies:
   flutter_test:
